# hbr

./: .codespell_ignore  .gitignore  .lgtm.yml  .travis.yml  BUGS  CMakeLists.txt  Makefile  Makefile.am  Makefile.orig  README  configure.ac  doxyfile.mk  gen_xml.c  gen_xml.h  handbrake_encode.dtd  hb_options.c  hb_options.h  hbr.c  hbr.dtd  hbr.xsd  out_options.c  out_options.h  refactoring  template.xml  test.xml  test_hbr.c  xml.c  xml.h
doc/: Doxyfile.in  Makefile.am  hbr.1
man/: hbr-gen.1
samples/: global_config  movie  series
scripts/: fetch_metadata.py  fetching_metadata  hbscan.py
src/: CMakeLists.txt  Makefile.am  build_args.c  build_args.h  gen_hbr.c  gen_hbr.h  gen_xml.c  gen_xml.h  gui.c  hb_options.c  hb_options.h  hbr-gen.c  hbr.c  keyfile.c  keyfile.h  options.c  options.h  out_options.c  out_options.h  test_hbr.c  util.c  util.h  validate.c  validate.h  xml.c
src/handbrake/: options-0.10.0.h  options-0.10.3.h  options-0.9.9.h  options-1.0.0.h  options-1.1.0.h  options-1.2.0.h  options-1.3.0.h
tests/: README  empty.t  valid_boolean.t  valid_filename_component.t  valid_positive_integer.t  valid_readable_path.t  valid_type.t  valid_writeable_path.t
tests/configs/: empty
tests/empty/: empty.hbr
tests/valid_boolean/: bad.hbr  good.hbr
tests/valid_filename_component/: bad.hbr  good.hbr
tests/valid_positive_integer/: bad.hbr  good.hbr
tests/valid_readable_path/: bad.hbr  good.hbr
tests/valid_type/: bad_series.hbr  good_movie.hbr  good_series.hbr  movie_no_year.hbr  type_varies.hbr
tests/valid_writeable_path/: bad.hbr  good.hbr
